[package]
name = "highscore_server"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
ron = "0.9"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "signal"] }
cfonts = "1.2.0"
